# balance-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: .flake8  main.py  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 10f8db191cab_created_models.py  18ffb3d8fb8f_test.py  2d4ef41b24bb_add_autoincrement.py  657208ef3ac7_add_autoincrement.py  afb86fe41b79_test.py  f9478b2cf994_create_models.py
src/api/: endpoints.py  pydantic_models.py
src/config/: db_config.py  db_session.py
src/db/: config.py  models.py  session.py
src/models/: person.py
src/routes/: endpoints.py
src/schemas/: replenishment.py  transfer.py  write_off.py
tests/: conftest.py  test_replenishment.py  test_transfer.py  test_write_off.py
