[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["SamuraiJeka <offissit123321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.34"
fastapi = "^0.114.0"
flake8 = "^7.1.1"
black = "^24.8.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
